[package]
name = "wait-for-internet"
version = "0.1.10"
edition = "2021"
authors = ["purarue"]
license = "MIT"
description = "Command line utility that waits till you have an internet connection."
readme = "README.md"
homepage = "https://github.com/purarue/wait-for-internet"
repository = "https://github.com/purarue/wait-for-internet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
online = "4.0.0"
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.69"
